// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - NewbieSelect renders correctly 1`] = `
<AppWrapper
  data-testid="newbie-select-page"
>
  <Navbar
    type="menu"
  />
  <Box
    component="section"
    marginBottom={5}
  >
    <Typography
      component="h2"
      variant="h2"
    >
      Your New Joiners
    </Typography>
    <Typography
      className="makeStyles-subTitle-1"
      component="p"
      variant="body2"
    >
      Don’t forget to complete all tasks
    </Typography>
  </Box>
  <Box
    component="section"
    marginBottom={2}
  >
    <CircularProgress />
  </Box>
  <PlusButton
    className="makeStyles-fabButton-2"
    disabled={true}
  />
</AppWrapper>
`;

exports[`Component - NewbieSelect renders correctly 2`] = `
<AppWrapper
  data-testid="newbie-select-page"
>
  <Navbar
    type="menu"
  />
  <Box
    component="section"
    marginBottom={5}
  >
    <Typography
      component="h2"
      variant="h2"
    >
      Your New Joiners
    </Typography>
    <Typography
      className="makeStyles-subTitle-1"
      component="p"
      variant="body2"
    >
      Don’t forget to complete all tasks
    </Typography>
  </Box>
  <PlusButton
    className="makeStyles-fabButton-2"
    disabled={true}
  />
</AppWrapper>
`;
